--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    color: white;
 }
 
 body {
@@ -12,64 +11,136 @@ body {
 }
 
 header {
-    font-size: 30px;
-    background-color: #000000;
     display: flex;
     justify-content: center;
-    padding: 30px 0px;
     align-items: center;
-
-
+    padding: 20px 0px;
+    margin: 0 auto;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    background-color: black;
 }
 
-.search {
+header>div {
+    text-transform: uppercase;
+    position: relative;
+    display: inline-block;
+    margin: 10px 0px;
+}
+
+.title_style {
+    font-family: 'Pacifico', sans-serif;
+    text-transform: none !important;
+}
+
+form {
+    color: white;
+}
+
+.serach {
     display: flex;
-    justify-content: right;
-    padding: 50px 0px;
-    /* border-bottom: 1px solid black; */
+    justify-content: center;
+    padding: 20px 0px;
+    height: 80px;
 }
 
-.search>label {
-    font-size: 22px;
+
+.serach>label {
+    font-size: 25px;
 }
 
-.search>input {
-    margin-left: 15px;
-    min-width: 200px;
-    padding: 8px;
-    background-color: #000000;
-
+.serach>input {
+    margin: 0px 10px;
+    width: 300px;
+    padding: 10px;
+    float: left;
+    font-size: 20px;
+    line-height: 30px;
 }
 
-.search>button {
-    margin-left: 10px;
-    padding: 5px 20px;
-    background-color: #000000;
-}
+.serach>button {
+    position: relative;
+    border: none;
 
-.movieList {
-    display: grid;
-    grid-template-columns: repeat(s, 1fr);
+    padding: 15px 30px;
+    border-radius: 15px;
+    /* box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2); */
+    text-decoration: none;
+    transition: 0.25s;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 20px;
+    display: flex;
+    text-align: center;
+    align-items: center;
     justify-content: center;
 }
 
-.movieCard {
-    background-color: darkgray;
+.serach>button:hover {
+    letter-spacing: 2px;
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.serach>button:active {
+    transform: scale(1.5);
+}
+
+.movie_list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+}
+
+.movie_card {
     margin: 20px;
-    padding: 20px;
-    width: 300px;
+    padding: 10px;
+    width: 100%;
     justify-self: center;
-    border-radius: 0px;
+    background-color: black;
+    border-radius: 10px;
     cursor: pointer;
     user-select: none;
+    position: relative;
+    color: white;
 }
 
-.movieCard>img {
+.movie_card>img {
     width: 100%;
-    border-radius: 10px;
+    border-radius: 0px;
+    height: inherit;
+    object-fit: cover;
 }
 
-.movieCard>h3 {
-    margin-bottom: 10px;
+.movie_card>div>h3 {
+    padding-bottom: 10px;
+    font-size: 30px;
+}
 
+.movie_card>div>p {
+    padding-bottom: 20px;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.2s;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.movie_card:hover .overlay {
+    opacity: 1;
 }
