--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
@@ -40,7 +41,7 @@ form {
     color: white;
 }
 
-.serach {
+.search {
     display: flex;
     position: sticky;
     justify-content: flex-end;
@@ -49,11 +50,15 @@ form {
 }
 
 
-.serach>label {
+.search>label {
     font-size: 25px;
 }
 
-.serach>input {
+.search_div {
+    display: flex;
+}
+
+.search input {
     margin: 0px 10px;
     width: 500px;
     padding: 10px;
@@ -64,7 +69,7 @@ form {
     background-color: white;
 }
 
-.serach>button {
+.search button {
     position: relative;
     border: none;
 
@@ -83,13 +88,13 @@ form {
 }
 
 /* 마우스 올렸을때 효과 */
-.serach>button:focus {
+.search button:focus {
     letter-spacing: 5px;
     transform: scale(1.0);
     cursor: pointer;
 }
 
-.serach>button:active {
+.search button:active {
     transform: scale(1.5);
 }
 
@@ -147,4 +152,20 @@ form {
 
 .movie_card:hover .overlay {
     opacity: 1;
+}
+
+.genre-buttons {
+    display: flex;
+    justify-content: left;
+    margin-top: 10px;
+}
+
+.genre-btn {
+    padding: 10px 20px;
+    margin-right: 10px;
+    background-color: tomato;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
 }
