--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     width: 1800px;
     margin: 0 auto;
-    background-color: black;
+    background-color: #F2E3E6;
 }
 
 header {
@@ -22,7 +22,7 @@ header {
     left: 0;
     right: 0;
     z-index: 1;
-    background-color: black;
+    background-color: #F2E3E6;
 }
 
 header>div {
@@ -32,10 +32,19 @@ header>div {
     margin: 10px 0px;
 }
 
-.title_style {
+/* .title_style {
     font-family: 'Pacifico', sans-serif;
     text-transform: none !important;
+} */
+
+.title_style img {
+    display: block;
+    margin: 0 auto;
+    width: 400px;
+    height: 150px;
 }
+
+
 
 form {
     color: white;
@@ -48,7 +57,6 @@ form {
     padding: 15px 0px;
     height: 80px;
 }
-
 
 .search>label {
     font-size: 25px;
@@ -65,21 +73,18 @@ form {
     float: left;
     font-size: 20px;
     line-height: 30px;
-    border-radius: 20px;
-    background-color: white;
+    /* border-radius: 20px; */
+    background-color: transparent;
+    color: white;
 }
 
 .search button {
     position: relative;
     border: none;
-
     padding: 15px 15px;
     border-radius: 15px;
-    /* box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2); */
-    text-decoration: none;
     transition: 0.25s;
     background-color: transparent;
-    /* color: white; */
     font-size: 20px;
     display: flex;
     text-align: center;
@@ -109,7 +114,7 @@ form {
     padding: 10px;
     width: 100%;
     justify-self: center;
-    background-color: black;
+    background-color: transparent;
     border-radius: 10px;
     cursor: pointer;
     user-select: none;
@@ -163,9 +168,11 @@ form {
 .genre-btn {
     padding: 10px 20px;
     margin-right: 10px;
-    background-color: tomato;
-    color: #fff;
+    background-color: #FFF48B;
+    color: #ED83B5;
     border: none;
     border-radius: 20px;
     cursor: pointer;
+    font-weight: 550;
+    font-size: 20px;
 }
